tests/ui/methods/method-ambig-two-traits-cross-crate.stderr
error[E0034]: multiple applicable items in scope
  --> $DIR/method-ambig-two-traits-cross-crate.rs:11:21
   |
LL | fn main() { 1_usize.me(); }
   |                     ^^ multiple `me` found
   |
   = note: candidate #1 is defined in an impl of the trait `Me` for the type `usize`
note: candidate #2 is defined in an impl of the trait `Me2` for the type `usize`
  --> $DIR/method-ambig-two-traits-cross-crate.rs:10:22
   |
LL | impl Me2 for usize { fn me(&self) -> usize { *self } }
   |                      ^^^^^^^^^^^^^^^^^^^^^
help: disambiguate the method for candidate #1
   |
LL | fn main() { Me::me(&1_usize); }
   |             ~~~~~~~~~~~~~~~~
help: disambiguate the method for candidate #2
   |
LL | fn main() { Me2::me(&1_usize); }
   |             ~~~~~~~~~~~~~~~~~

error: aborting due to previous error

For more information about this error, try `rustc --explain E0034`.
